--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" type="text/css" href="C:\Users\user\Desktop\module2-solution\css\style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 			<h1>Our Menu</h1>
 	</head>
 	<body>
